tests/baselines/reference/esnextmodulekindWithES5Target9.errors.txt
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.ts(1,15): error TS2307: Cannot find module 'mod' or its corresponding type declarations.
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.ts(3,17): error TS5084: Cannot find module 'mod'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.ts(5,20): error TS2307: Cannot find module 'mod' or its corresponding type declarations.
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.ts(13,15): error TS2307: Cannot find module 'mod' or its corresponding type declarations.
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.ts(15,17): error TS5084: Cannot find module 'mod'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.ts (5 errors) ====
    import d from "mod";
                  ~~~~~
!!! error TS2307: Cannot find module 'mod' or its corresponding type declarations.
    
    import {a} from "mod";
                    ~~~~~
!!! error TS5084: Cannot find module 'mod'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    
    import * as M from "mod";
                       ~~~~~
!!! error TS2307: Cannot find module 'mod' or its corresponding type declarations.
    
    export {a};
    
    export {M};
    
    export {d};
    
    export * from "mod";
                  ~~~~~
!!! error TS2307: Cannot find module 'mod' or its corresponding type declarations.
    
    export {b} from "mod"
                    ~~~~~
!!! error TS5084: Cannot find module 'mod'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    
    export default d;
    